[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a `https://polkadot.network` node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.9.24"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.57.0" # custom profiles
readme = "README.md"

[dependencies]
polkadot-cli = { path = "cli", features = [ "kusama-native", "westend-native", "rococo-native" ]  }
color-eyre = { version = "0.6.1", default-features = false }
parity-util-mem = { version = "0.11.0", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "2.0.4"
nix = "0.24.1"
tempfile = "3.2.0"
tokio = "1.18.2"
remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
polkadot-core-primitives = { path = "core-primitives" }

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"primitives/test-helpers",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/metrics",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/polkadot/constants",
	"runtime/kusama",
	"runtime/kusama/constants",
	"runtime/rococo",
	"runtime/rococo/constants",
	"runtime/westend",
	"runtime/westend/constants",
	"runtime/test-runtime",
	"runtime/test-runtime/constants",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/xcm-executor/integration-tests",
	"xcm/xcm-simulator",
	"xcm/xcm-simulator/example",
	"xcm/xcm-simulator/fuzzer",
	"xcm/pallet-xcm",
	"xcm/pallet-xcm-benchmarks",
	"xcm/procedural",
	"node/client",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/chain-selection",
	"node/core/dispute-coordinator",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/pvf-checker",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/network/dispute-distribution",
	"node/overseer",
	"node/orchestra",
	"node/orchestra/proc-macro",
	"node/malus",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-types",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/gum",
	"node/gum/proc-macro",
	"node/metrics",
	"node/metered-channel",
	"node/test/client",
	"node/test/performance-test",
	"node/test/service",
	"node/zombienet-backchannel",
	"rpc",
	"parachain",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"parachain/test-parachains/halt",
	"parachain/test-parachains/undying",
	"parachain/test-parachains/undying/collator",
	"utils/staking-miner",
	"utils/remote-ext-tests/bags-list",
	"utils/generate-bags",
]

# We want to be able to build the bridge relayer without pulling it (and all of its
# dependencies into the Polkadot workspace)
exclude = ["bridges/relays/bin-substrate", "bridges/bin/rialto/runtime", "bridges/bin/millau/runtime"]

[badges]
maintenance = { status = "actively-developed" }

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2b_simd = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
parking_lot = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]
fast-runtime = [ "polkadot-cli/fast-runtime" ]
runtime-metrics = [ "polkadot-cli/runtime-metrics" ]
pyroscope = ["polkadot-cli/pyroscope"]
staging-client = ["polkadot-cli/staging-client"]
[patch."https://github.com/paritytech/substrate"]
node-template ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-benchmarking ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-support ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-support-procedural ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-support-procedural-tools ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-support-procedural-tools-derive ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-arithmetic ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-debug-derive ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-std ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-core ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-core-hashing ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-externalities ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-storage ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-runtime-interface ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-runtime-interface-proc-macro ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-tracing ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-wasm-interface ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-io ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-keystore ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-state-machine ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-panic-handler ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-trie ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-runtime ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-application-crypto ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-api ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-api-proc-macro ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-version ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-core-hashing-proc-macro ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-version-proc-macro ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-test-primitives ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-test-runtime-client ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-block-builder ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-client-api ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-prometheus-endpoint ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-executor ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-executor-common ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-allocator ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-maybe-compressed-blob ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-sandbox ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-serializer ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-executor-wasmi ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-executor-wasmtime ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-runtime-test ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-tasks ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-wasm-builder ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-tracing ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-rpc-server ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-tracing-proc-macro ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-blockchain ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-consensus ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-inherents ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-database ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-test-runtime ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
beefy-primitives ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-system ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-system-rpc-runtime-api ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-babe ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-authorship ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-authorship ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-session ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-timestamp ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-timestamp ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-session ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-staking ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-consensus-babe ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-consensus-slots ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-consensus-vrf ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-election-provider-support ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-election-provider-solution-type ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-npos-elections ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-test-utils ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-test-utils-derive ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-service ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-chain-spec ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-chain-spec-derive ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-network ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
fork-tree ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-utils ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-network-common ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-peerset ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-network-light ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-network-sync ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-finality-grandpa ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-telemetry ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-client-db ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-state-db ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-informant ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-transaction-pool-api ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-keystore ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-offchain ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-offchain ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-transaction-pool ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-transaction-pool ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-test-runtime-transaction-pool ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-rpc-api ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-sysinfo ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-block-builder ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-transaction-storage-proof ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-balances ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-transaction-payment ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-offences ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-staking ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-bags-list ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-staking-reward-curve ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-consensus-aura ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-keyring ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-test-client ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-runtime-interface-test-wasm ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-benchmarking-cli ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-cli ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-template-runtime ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-executive ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-system-benchmarking ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-try-runtime ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-aura ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-grandpa ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-randomness-collective-flip ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-sudo ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-template ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-transaction-payment-rpc-runtime-api ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-transaction-payment-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-basic-authorship ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-proposer-metrics ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus-aura ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus-slots ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-network-test ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-finality-grandpa ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-network-gossip ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-frame-rpc-system ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
try-runtime-cli ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
remote-externalities ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-elections-phragmen ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-build-script-utils ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-bench ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-primitives ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-runtime ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-asset-tx-payment ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-assets ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-authority-discovery ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-authority-discovery ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-bounties ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-treasury ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-child-bounties ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-collective ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-contracts ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-contracts-primitives ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-contracts-proc-macro ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-utility ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-contracts-rpc-runtime-api ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-conviction-voting ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-scheduler ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-preimage ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-democracy ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-election-provider-multi-phase ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-election-provider-support-benchmarking ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-gilt ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-identity ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-im-online ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-indices ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-lottery ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-support-test ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-support-test-pallet ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-membership ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-mmr ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-mmr-primitives ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-multisig ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-nomination-pools ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-nomination-pools-benchmarking ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-offences-benchmarking ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-proxy ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-recovery ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-referenda ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-remark ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-session-benchmarking ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-society ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-state-trie-migration ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-state-trie-migration-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-tips ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-transaction-storage ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-uniques ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-vesting ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-whitelist ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-testing ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-executor ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-cli ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-inspect ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-contracts-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-mmr-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus-babe ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus-epochs ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus-babe-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-finality-grandpa-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-sync-state-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-authority-discovery ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus-uncles ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-service-test ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-frame-cli ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
chain-spec-builder ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
subkey ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
beefy-gadget ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
beefy-gadget-rpc ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus-manual-seal ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sc-consensus-pow ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-consensus-pow ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-atomic-swap ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-bags-list-fuzzer ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-bags-list-remote-tests ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-beefy ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-beefy-mmr ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
beefy-merkle-tree ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-election-solution-type-fuzzer ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-example-basic ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-example-offchain-worker ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-example-parallel ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-nicks ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-node-authorization ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-scored-pool ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
pallet-staking-reward-fn ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
frame-support-test-compile-pass ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-api-test ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-application-crypto-test ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-arithmetic-fuzzer ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-npos-elections-fuzzer ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-runtime-interface-test ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
sp-runtime-interface-test-wasm-deprecated ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-test-utils-test-crate ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
substrate-frame-rpc-support ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
generate-bags ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }
node-runtime-generate-bags ={git = "https://github.com/composableFi/substrate" ,branch = "mmr-polkadot-v0.9.24" }

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "polkadot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
polkadot = { path = "/usr/bin/polkadot" }

[package.metadata.rpm.files]
"../scripts/packaging/polkadot.service" = { path = "/usr/lib/systemd/system/polkadot.service", mode = "644" }

[package.metadata.spellcheck]
config = "./scripts/ci/gitlab/spellcheck.toml"
